<resources>
    <string name="app_name">EvoCasaAdmin</string>
    <string name="title_welcome">Welcome back</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_password">Password</string>
    <string name="title_username">Username</string>
    <string name="title_enter_user">Enter your username</string>
    <string name="tilte_enter_pw">Enter your password</string>
    <string name="title_remember">Remember me next time</string>

    <string name="title_customer_management">Customer Management</string>
    <string name="title_hint_Search">Search</string>
    <string name="total_customers_value">12</string>
    <string name="total_customers">Total Customers</string>
    <string name="total_customers_percent">+15%</string>
    <string name="new_customers_value">2</string>
    <string name="new_customers">New Customers</string>
    <string name="new_customers_percent">+10%</string>
    <string name="total_orders_value">10</string>
    <string name="total_orders">Total Orders</string>
    <string name="total_orders_percent">+5%</string>
    <string name="customer_id">ID</string>
    <string name="customer_gender">Gender</string>
    <string name="customer_mail">Mail</string>
    <string name="customer_phone">Phone</string>
    <string name="customer_dob">DOB</string>
    <string name="title_view">View</string>
    <string name="title_order_management">Order Management</string>
    <string name="total_orders_management">Total Orders (%1$d)</string>
    <string name="title_filter">Filter</string>
    <string name="title_customer_detail">Customer Details</string>
    <string name="title_order_detail">Order Details</string>


</resources>